--- a/References.bib
+++ b/References.bib
@@ -1632,6 +1632,7 @@
   booktitle = {ASHRAE Winter Conference},
   year      = {2012},
   address   = {Chicago, IL},
+  note      = {Jan. 21-25},
   journal   = {ASHRAE},
 }
 
@@ -3509,6 +3510,48 @@ The work reported in the thesis shows that it is fairly simple to apply the theo
   publisher = {Dover Publications},
   year      = {2002},
   author    = {\"{O}zi\c{s}ik, M. Necati},
+}
+
+@Article{RUIZCALVO2016720,
+  author   = {Félix Ruiz-Calvo and Mattia De Rosa and Patricia Monzó and Carla Montagud and José M. Corberán},
+  title    = {{Coupling short-term (B2G model) and long-term (g-function) models for ground source heat exchanger simulation in TRNSYS. Application in a real installation}},
+  journal  = {Applied Thermal Engineering},
+  year     = {2016},
+  volume   = {102},
+  pages    = {720--732},
+  issn     = {1359-4311},
+  abstract = {Ground-source heat pump (GSHP) systems represent one of the most promising techniques for heating and cooling in buildings. These systems use the ground as a heat source/sink, allowing a better efficiency thanks to the low variations of the ground temperature along the seasons. The ground-source heat exchanger (GSHE) then becomes a key component for optimizing the overall performance of the system. Moreover, the short-term response related to the dynamic behaviour of the GSHE is a crucial aspect, especially from a regulation criteria perspective in on/off controlled GSHP systems. In this context, a novel numerical GSHE model has been developed at the Instituto de Ingeniería Energética, Universitat Politècnica de València. Based on the decoupling of the short-term and the long-term response of the GSHE, the novel model allows the use of faster and more precise models on both sides. In particular, the short-term model considered is the B2G model, developed and validated in previous research works conducted at the Instituto de Ingeniería Energética. For the long-term, the g-function model was selected, since it is a previously validated and widely used model, and presents some interesting features that are useful for its combination with the B2G model. The aim of the present paper is to describe the procedure of combining these two models in order to obtain a unique complete GSHE model for both short- and long-term simulation. The resulting model is then validated against experimental data from a real GSHP installation.},
+  doi      = {https://doi.org/10.1016/j.applthermaleng.2016.03.127},
+  keywords = {Ground source heat pump, Borehole heat exchanger, Heating and cooling systems, Dynamic modelling},
+  url      = {http://www.sciencedirect.com/science/article/pii/S1359431116304355},
+}
+
+@Article{CUI201884,
+  author   = {Yuanlong Cui and Jie Zhu and Ssennoga Twaha and Saffa Riffat},
+  title    = {{A comprehensive review on 2D and 3D models of vertical ground heat exchangers}},
+  journal  = {Renewable and Sustainable Energy Reviews},
+  year     = {2018},
+  volume   = {94},
+  pages    = {84--114},
+  issn     = {1364-0321},
+  abstract = {The ground source heat pumps (GSHPs) have been extensively applied to commercial and residential buildings owing to their high-energy efficiencies and low running costs. The key component of the GSHP is a ground heat exchanger (GHE). The state-of-the-art two-dimensional (2D) and three-dimensional (3D) heat transfer models for borehole heat exchanger (BHE) and energy pile (EP) systems are reviewed in this paper. The physical procedures of heat transfer and the derivation of energy conservation within different channels of BHE (e.g., U-, W-, helical-shaped or coaxial-shaped) are summarized, in addition to the primary merits and demerits of each model. The main influencing factors on 2D and 3D model solutions including axial heat transfer, friction heat, spacing shack, thermal resistance, thermal short-circuiting between the inlet-pipe and outlet-pipe, are analysed and compared. Furthermore, various applications of these 2D and 3D models are elaborated. Finally, the recommendations, standpoints and potential future research on BHE heat transfer model are highlighted. It is believed that the work presented will contribute to the record of information and experiences necessary to develop BHEs for GSHP systems.},
+  doi      = {https://doi.org/10.1016/j.rser.2018.05.063},
+  keywords = {2D and 3D models, BHEs, EPs, Analytical and numerical approaches, Borehole thermal resistances},
+  url      = {http://www.sciencedirect.com/science/article/pii/S1364032118304088},
+}
+
+@Article{DUSSEAULT2018249,
+  author   = {Bernard Dusseault and Philippe Pasquier and Denis Marcotte},
+  title    = {A block matrix formulation for efficient g-function construction},
+  journal  = {{Renewable Energy}},
+  year     = {2018},
+  volume   = {121},
+  pages    = {249--260},
+  issn     = {0960-1481},
+  abstract = {A compact block matrix formulation allowing fast construction of the g-function of a ground heat exchanger is presented. This new formulation is nor sequential nor iterative, doesn't require use of Laplace or Fourier transform and provides a g-function by solving a single system of linear equations assembled in a block matrix system. A method to accelerate the integration of the finite-line source model based on Chebyshev polynomials is also introduced. Although it suffers from a fixed cost in terms of computational time, this approach allows to speed up the g-function assessment even further when used jointly with the block matrix formulation on large fields. By using both strategies, constructing the g-function of a ground heat exchanger composed of 50 regularly spaced boreholes can be achieved in less than half-second while committing only a small relative error. The speed and compactness of the block matrix formulation could be useful to design ground heat exchangers with optimization-based algorithms, which can require the assessment of several thousand g-functions.},
+  doi      = {https://doi.org/10.1016/j.renene.2017.12.092},
+  keywords = {g-function, Block matrix notation, Chebyshev polynomials, Ground heat exchanger, Finite line-source model, Convolution matrix},
+  url      = {http://www.sciencedirect.com/science/article/pii/S096014811731296X},
 }
 
 @Comment{jabref-meta: databaseType:bibtex;}
