--- a/References.bib
+++ b/References.bib
@@ -3554,4 +3554,76 @@ The work reported in the thesis shows that it is fairly simple to apply the theo
   url      = {http://www.sciencedirect.com/science/article/pii/S096014811731296X},
 }
 
+@Article{DEROSA2015347,
+  author   = {Mattia De Rosa and Félix Ruiz-Calvo and José M. Corberán and Carla Montagud and Luca A. Tagliafico},
+  title    = {{A novel TRNSYS type for short-term borehole heat exchanger simulation: B2G model}},
+  journal  = {Energy Conversion and Management},
+  year     = {2015},
+  volume   = {100},
+  pages    = {347--357},
+  issn     = {0196-8904},
+  abstract = {Models of ground source heat pump (GSHP) systems are used as an aid for the correct design and optimization of the system. For this purpose, it is necessary to develop models which correctly reproduce the dynamic thermal behavior of each component in a short-term basis. Since the borehole heat exchanger (BHE) is one of the main components, special attention should be paid to ensuring a good accuracy on the prediction of the short-term response of the boreholes. The BHE models found in literature which are suitable for short-term simulations usually present high computational costs. In this work, a novel TRNSYS type implementing a borehole-to-ground (B2G) model, developed for modeling the short-term dynamic performance of a BHE with low computational cost, is presented. The model has been validated against experimental data from a GSHP system located at Universitat Politècnica de València, Spain. Validation results show the ability of the model to reproduce the short-term behavior of the borehole, both for a step-test and under normal operating conditions.},
+  doi      = {https://doi.org/10.1016/j.enconman.2015.05.021},
+  keywords = {Ground source heat pump, Borehole heat exchanger, Heating and cooling systems, Dynamic modeling},
+  url      = {http://www.sciencedirect.com/science/article/pii/S0196890415004689},
+}
+
+@InProceedings{Witte2018,
+  author    = {Witte, Henk J. L.},
+  title     = {A novel tool for assessing negative temperature interactions between neighboring borehole heat exchanger systems},
+  booktitle = {14\textsuperscript{th} International Conference on Energy Storage-EnerSTOCK2018},
+  year      = {2018},
+  pages     = {1--14},
+  address   = {Adana, Turkey},
+  note      = {April 25--28},
+}
+
+@InProceedings{FasciLazzarottoAcunaClaesson2018,
+  author       = {Maria Letizia Fasc\`a and Alberto Lazzarotto and Jos\'e Acu\tilde{n}a and Joachim Claesson},
+  title        = {Thermal influence of neighboring {GSHP} installations: relevance of heat load temporal resolution},
+  booktitle    = {IGSHPA Technical/Research Conference Proceedings},
+  year         = {2018},
+  pages        = {440--448},
+  address      = {Stockholm, Sweden},
+  organization = {IGSHPA},
+  note         = {September 18--20},
+}
+
+@Article{NIAN2018733,
+  author   = {Yong-Le Nian and Wen-Long Cheng},
+  title    = {Analytical g-function for vertical geothermal boreholes with effect of borehole heat capacity},
+  journal  = {Applied Thermal Engineering},
+  year     = {2018},
+  volume   = {140},
+  pages    = {733--744},
+  issn     = {1359-4311},
+  abstract = {Thermal response factors, known as g-functions play an important role in design in geothermal boreholes and ground heat exchangers (GHE). In this paper, a new analytical g-function is proposed to account for the effect of borehole heat capacity (BHC) on ground thermal response; and the quantitative effect of BHC on ground and fluid temperature can be obtained by the new g-function without needing transient borehole resistance. Firstly, a cylindrical source model considering BHC effect was built to conduct the new g-function by Laplace transform method. Then, the fluid temperature models coupling with the proposed g-function were built to investigate the effect of BHC fluid temperature. By comparing new model with conventional g-functions, it was found that the new g-function agreed better with the experimental data than the conventional models during short time. The largest relative error for ground temperature prediction for U pipe GHE was about 2.9% and the mean relative error for fluid temperature prediction in coaxial GHE was less than 1%. Moreover, it was found that the BHC had an especially significant influence on ground thermal response and fluid temperature at short times and the influence weakened with time. And the larger the BHC was, the smaller the influence radius would be.},
+  doi      = {https://doi.org/10.1016/j.applthermaleng.2018.05.086},
+  keywords = {Geothermal borehole, Ground heat exchangers, g-functions, Borehole heat capacity, Transient heat conduction},
+  url      = {http://www.sciencedirect.com/science/article/pii/S1359431118318039},
+}
+
+@Article{LI2015178,
+  author   = {Min Li and Alvin C. K. Lai},
+  title    = {Review of analytical models for heat transfer by vertical ground heat exchangers ({GHEs}): A perspective of time and space scales},
+  journal  = {Applied Energy},
+  year     = {2015},
+  volume   = {151},
+  pages    = {178--191},
+  issn     = {0306-2619},
+  abstract = {Ground (or geothermal) heat exchangers are attracting a great deal of attention as a way of using shallow geothermal energy. This paper provides not only a critical review but also a thorough introduction to the analysis of heat transfer by borehole and foundation pile ground heat exchangers, with an emphasis on different analytical models. The literature is reviewed in a time-scale framework because of the diversity of the time and space scales involved in the thermal processes of ground heat exchangers. We summarize, discuss, and evaluate major advances in this field, including heat-source models, short-time models, models for energy piles, in situ thermal-response tests, indoor sandbox experiments, and parameter estimation as an inverse problem. Of particular note is that the unit-step temperature response (i.e., G-function) of a ground heat exchanger with one U-shaped pipe is calculated; and six analytical models are compared: an infinite cylinder-source model, two infinite line-source models, two finite line-source models, and a composite-medium line-source model. This paper closes by identifying several unsolved problems that require solutions.},
+  doi      = {https://doi.org/10.1016/j.apenergy.2015.04.070},
+  keywords = {Ground heat exchanger, Energy pile, Ground-coupled heat pump, Ground heat storage, In situ thermal-response test},
+  url      = {http://www.sciencedirect.com/science/article/pii/S0306261915005334},
+}
+
+@Article{Onsager1931,
+  author  = {Lars Onsager},
+  title   = {Reciprocal relations in irreversible processes. {I}},
+  journal = {Physical Review},
+  year    = {1931},
+  volume  = {37},
+  pages   = {405--426},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
