--- a/References.bib
+++ b/References.bib
@@ -1690,7 +1690,7 @@
 
 @Article{BallFischerHodgett1983,
   author  = {D. A. Ball and R. D. Fischer and D. L. Hodgett},
-  title   = {Design Methods for Ground-source Heat Pumps},
+  title   = {Design methods for ground-source heat pumps},
   journal = {ASHRAE Transactions},
   year    = {1983},
   volume  = {89},
@@ -1939,7 +1939,7 @@
 
 @Article{Bauer2011,
   author  = {D. Bauer and W. Heidemann and H. M{\"u}ller-Steinhagen and H.-J. G. Diersch},
-  title   = {Thermal Resistance and Capacity Models for Borehole Heat Exchangers},
+  title   = {Thermal resistance and capacity models for borehole heat exchangers},
   journal = {International Journal of Energy Research},
   year    = {2011},
   volume  = {35},
@@ -2375,7 +2375,7 @@ In 1996, a US federal agency began developing a new building energy simulation t
   title        = {Modeling of Short Geothermal Boreholes in Series with Experimental Validation},
   booktitle    = {11\textsuperscript{th} IEA Heat Pump Conference},
   year         = {2014},
-  address      = {Montr{\'e}al},
+  address      = {Montr{\'e}al, Qu{\'e}bec, Canada},
   organization = {International Energy Agency},
   note         = {May 12--16},
 }
@@ -2866,6 +2866,7 @@ In 1996, a US federal agency began developing a new building energy simulation t
   title     = {Field Test and Evaluation of Residential Ground Source Heat Pump Systems Using Alternative Vertical-bore Ground Heat Exchangers},
   booktitle = {11\textsuperscript{th} IEA Heat Pump Conference},
   year      = {2014},
+  address   = {Montr{\'e}al, Qu{\'e}bec, Canada},
   note      = {May 12--14},
   type      = {Conference Proceedings},
 }
@@ -3624,6 +3625,155 @@ The work reported in the thesis shows that it is fairly simple to apply the theo
   year    = {1931},
   volume  = {37},
   pages   = {405--426},
+}
+
+@Article{CIMMINO2019366,
+  author   = {Massimo Cimmino and Bantwal R. (Rabi) Baliga},
+  title    = {A hybrid numerical-semi-analytical method for computer simulations of groundwater flow and heat transfer in geothermal borehole fields},
+  journal  = {International Journal of Thermal Sciences},
+  year     = {2019},
+  volume   = {142},
+  pages    = {366--378},
+  issn     = {1290-0729},
+  abstract = {The formulation of a hybrid numerical-semi-analytical method for cost-effective simulations of heat transfer in fields of vertical geothermal boreholes, in the presence of groundwater flow, is presented. An amalgamation of a co-located control-volume finite element method and a finite volume method is used to solve 1) a volume-averaged continuity and the Darcy-Brinkman-Frochheimer equations to obtain the distribution of the groundwater flow; and 2) an unsteady three-dimensional volume-averaged advection-conduction equation to calculate the related ground temperature distribution, assuming local thermodynamic equilibrium between the groundwater and the soil particles. The bulk temperature distribution of the working fluid (flowing inside the legs of a U-tube pipe inserted inside each borehole and kept in place by grout) and the related heat extraction (or addition) rate are obtained using a semi-analytical method to solve a quasi-steady quasi-one-dimensional model. The conditions of no-slip, impermeability, equality of temperature, and continuity of heat flux are used at the interface between each borehole and the groundwater-saturated soil in the borehole field. The proposed method is applied to test and demonstration problems to demonstrate its capabilities.},
+  doi      = {https://doi.org/10.1016/j.ijthermalsci.2019.04.012},
+  keywords = {Geothermal borehole fields, Groundwater flow, Hybrid numerical-semi-analytical method, Darcy-Brinkman-Forchheimer equations, Volume-averaged advection-conduction equation, Control-volume finite element method},
+  url      = {http://www.sciencedirect.com/science/article/pii/S1290072918315576},
+}
+
+@Article{NILSSON2019,
+  author   = {Emil Nilsson and Patrik Rohdin},
+  title    = {Performance evaluation of an industrial borehole thermal energy storage ({BTES}) project – experiences from the first seven years of operation},
+  journal  = {Renewable Energy},
+  year     = {2019},
+  issn     = {0960-1481},
+  abstract = {Borehole thermal energy storage (BTES) is a technology which allows for both seasonal and short-to-medium-term storage of thermal energy and which can be used for both heating and cooling. This makes BTES of special interest to many industries. However, post-implementation evaluations of large-scale industrial BTES are scarce. The BTES at Xylem’s production plant in Emmaboda, Sweden is one of the world’s largest BTES systems for storage of industrial excess heat. In this paper, the BTES at Emmaboda was evaluated with respect to how it was integrated and how it has performed during its first seven years of operation. The BTES consists of 140 boreholes, 150 m deep, and heat for storage is mainly recovered from two high-temperature ovens and the foundry ventilation air. So far, the highest heat extraction and BTES efficiency (19%) took place in the storage system’s sixth full year of operation, when roughly 2200 MWh and 400 MWh were injected into and extracted from the storage respectively. One main reason extraction is not higher is that the quantities and/or the quality of the excess heat for storage are lower than estimated, thus hindering the storage from reaching the necessary temperatures for heat extraction.},
+  doi      = {https://doi.org/10.1016/j.renene.2019.05.020},
+  keywords = {borehole thermal energy storage, industrial excess heat, BTES performance, temperature distribution, geothermal technology, thermal conductivity},
+  url      = {http://www.sciencedirect.com/science/article/pii/S096014811930672X},
+}
+
+@Article{LAMARCHE2017354,
+  author   = {Louis Lamarche},
+  title    = {g-function generation using a piecewise-linear profile applied to ground heat exchangers},
+  journal  = {International Journal of Heat and Mass Transfer},
+  year     = {2017},
+  volume   = {115},
+  pages    = {354--360},
+  issn     = {0017-9310},
+  abstract = {In the context of geothermal applications, the thermal response of the ground is a primary concern. Many models use the concept of g-function introduced by Eskilson in the eighties. These functions were associated with a special field arrangement and libraries of tabulated values were pre-calculated and made available for simulation. In order to increase the flexibility, several analytical models were recently proposed and the model of Cimmino and Bernier is the most precise of such models. In their approach, they split each borehole into segments where they assume an unknown constant heat flux. In this paper, we modify their approach where we replace the piecewise-constant heat flux profile assumption by a piecewise-linear distribution. Doing so, it is possible to achieve the same precision with fewer segments in the model. The model needs however a new mathematical treatment of the thermal response which is developed in the present paper. Comparison between both approaches and original Eskison g-function is done.},
+  doi      = {https://doi.org/10.1016/j.ijheatmasstransfer.2017.08.051},
+  keywords = {Ground heat exchanger, Finite line source, g-function, Variable heat loads, Analytical solutions},
+  url      = {http://www.sciencedirect.com/science/article/pii/S0017931017320616},
+}
+
+@Article{FOSSA2013323,
+  author   = {Marco Fossa and Fabio Minchio},
+  title    = {The effect of borefield geometry and ground thermal load profile on hourly thermal response of geothermal heat pump systems},
+  journal  = {Energy},
+  year     = {2013},
+  volume   = {51},
+  pages    = {323--329},
+  issn     = {0360-5442},
+  abstract = {Vertical BHE (borehole heat exchangers) are a common solution for GCHP applications (ground coupled heat pump). Correct BHE design and sizing are mandatory to either assure long term GCHP performance or reduce the payback period. Most models for performing the time varying analysis of complex borefields are based on the solution of the conduction equation, through the calculation of proper temperature response factors. The DST (Duct Storage Model) is often referred as the benchmark analysis tool, even if it is based on a simplified description of the borefield geometry. In this paper, DST predictions, in terms of hourly fluid temperatures along 20 years, are compared with the corresponding results obtained by implementing the MLAA (Multiple Aggregation Algorithm) approach by Bernier et al. into a model able to employ suitable g-functions generated starting from the Finite Line Source solution. This paper discusses some aspects of the improvements here introduced to the original MLAA method. The study is devoted to the comparison between the predicted fluid temperature values by the DST and MLAA models, with special attention to the influence of the BHE geometry (matrix like vs in line configurations) and to the shape of the yearly hourly load profiles (balanced vs unbalanced ground loads).},
+  doi      = {https://doi.org/10.1016/j.energy.2012.12.043},
+  keywords = {Geothermal heat pumps, Borehole heat exchangers, g-functions},
+  url      = {http://www.sciencedirect.com/science/article/pii/S036054421300011X},
+}
+
+@Article{LAMARCHE20092252,
+  author   = {Louis Lamarche},
+  title    = {A fast algorithm for the hourly simulations of ground-source heat pumps using arbitrary response factors},
+  journal  = {Renewable Energy},
+  year     = {2009},
+  volume   = {34},
+  number   = {10},
+  pages    = {2252--2258},
+  issn     = {0960-1481},
+  abstract = {Hourly energy simulations are an important part of the design and analysis of ground-source heat pump systems. In order to evaluate the fluid temperature in the borehole of a geothermal heat pump system, most of the current models express the heat transfer rate as a sum of step changes in heat transfer rate. The borehole temperature is then computed as a superposition of the different contributions of each time step. The main difference between the different models lies in the way the step response is computed. Since all these methods are based on a convolution scheme, long time simulations are very time consuming. Many load aggregation algorithms have been proposed in order to reduce this computational time. In a previous paper we proposed a new algorithm to evaluate the overall response which was much faster than the classical aggregation schemes. However this new algorithm was based on the cylindrical source step response for a single borehole. In this paper, we present a generalization of this scheme for any kind of step response making it a very powerful tool for hourly simulations.},
+  doi      = {https://doi.org/10.1016/j.renene.2009.02.010},
+  keywords = {Ground source heat pump, Ground heat exchanger, Inverse Laplace transforms},
+  url      = {http://www.sciencedirect.com/science/article/pii/S0960148109000731},
+}
+
+@Article{NALDI2019278,
+  author   = {Claudia Naldi and Enzo Zanchini},
+  title    = {A new numerical method to determine isothermal g-functions of borehole heat exchanger fields},
+  journal  = {Geothermics},
+  year     = {2019},
+  volume   = {77},
+  pages    = {278--287},
+  issn     = {0375-6505},
+  abstract = {An iterative numerical method to determine g-functions of borehole fields with the boundary condition of uniform temperature and time-constant surface-averaged heat flux is proposed. The method employs boundary conditions of uniform time-dependent temperature that converge to time-constant surface-averaged heat flux. Two simulations are sufficient for technical purposes, while additional simulations yield very precise g-functions with the desired boundary condition. The method is applied to analyze the overestimation of the g-function yielded by the condition of uniform and constant heat flux and the effects of the buried depth and of the spacing between boreholes on the g-function, for a 3 × 2 borehole field.},
+  doi      = {https://doi.org/10.1016/j.geothermics.2018.10.007},
+  keywords = {Ground-coupled heat pumps, Borehole heat exchangers, Thermal response factor, -, Isothermal boundary condition, Numerical method},
+  url      = {http://www.sciencedirect.com/science/article/pii/S0375650518301433},
+}
+
+@Article{CHEN2019793,
+  author   = {Youming Chen and Bingbing Pan and Xunshui Zhang and Ciyuan Du},
+  title    = {Thermal response factors for fast parameterized design and long-term performance simulation of vertical {GCHP} systems},
+  journal  = {Renewable Energy},
+  year     = {2019},
+  volume   = {136},
+  pages    = {793--804},
+  issn     = {0960-1481},
+  abstract = {Ground-coupled heat pump (GCHP) system is one of the important renewable energy systems. Vertical ground heat exchanger (GHE) is the most expensive part of GCHP systems. Fast and accurate computation of fluid and ground temperatures is desired for the long-term prediction of GCHP performance and the optimal sizing of borehole fields. In this paper, a thermal response factors, δ-function is proposed for computing fluid and ground temperatures of borehole fields. δ-function is a non-dimensional ground temperature response and an accurate analytical solution of finite line source model to a unit rectangular heat pulse. Numerical computation of δ-function is quite fast for its small integral range. The accuracy of δ-function is validated by the simulation results of g-function. The comparative computations are conducted for the hourly simulation of various long periods by combining the g- and δ-functions with both time and spectral domain methods. It is found that the combination of δ-function with fast Fourier transform (FFT) provides dramatically fast computing speed. Therefore, the computation approach of δ-function combined with FFT is the most suitable to quickly and accurately compute the fluid and ground temperatures in parameterized design and long-term simulation of vertical GHE and GCHP systems.},
+  doi      = {https://doi.org/10.1016/j.renene.2018.12.114},
+  keywords = {Rectangular heat pulse, function, Fast Fourier transform, Long-term simulation, Vertical ground heat exchanger, Ground-coupled heat pump},
+  url      = {http://www.sciencedirect.com/science/article/pii/S0960148118315684},
+}
+
+@Article{MAESTRE2015631,
+  author   = {Ismael Rodríguez Maestre and Francisco Javier González Gallero and Pascual Álvarez Gómez and Luis Pérez-Lombard},
+  title    = {A new {RC} and g-function hybrid model to simulate vertical ground heat exchangers},
+  journal  = {Renewable Energy},
+  year     = {2015},
+  volume   = {78},
+  pages    = {631--642},
+  issn     = {0960-1481},
+  abstract = {This paper presents a new hybrid two-dimensional model to simulate single U-tube ground heat exchangers based on the use of the electrical analogy to model heat transfer within the borehole and thermal response factors (short and long time-step g-functions) to estimate heat flow to the surrounding ground. Unlike other similar models, heat transfer equations are discretized only within the borehole domain, with two nodes for the fluid and two additional nodes for the grouting material, reducing the number of equations as ground temperature nodes are not considered. The substitution of ground nodes with short and long-term g-functions allows the simulation with short time steps keeping the possibility of simulating periods of several years. A complete analysis of the influence of characteristic parameters of the model in terms of the heat conduction path, vertical discretization level and equivalent heat capacity, has been carried out. The model shows a good performance for short simulation time-steps of five minutes for the prediction of both the short-term and long-term response. It has been successfully validated through comparison with a numerical computational fluid dynamic (CFD) reference model, achieving good RMSE values, which were smaller than 0.15 °C for water outlet temperature and borehole surface mean temperature.},
+  doi      = {https://doi.org/10.1016/j.renene.2015.01.045},
+  keywords = {Ground heat exchanger, RC model, g-function, Building simulation program},
+  url      = {http://www.sciencedirect.com/science/article/pii/S0960148115000634},
+}
+
+@Article{MAO2017336,
+  author   = {Qianjun Mao and Yufeng Chen},
+  title    = {Experimental investigation of thermal performance of a ground source heat pump system for spring season},
+  journal  = {Energy and Buildings},
+  year     = {2017},
+  volume   = {152},
+  pages    = {336--340},
+  issn     = {0378-7788},
+  abstract = {Limited fossil fuels for heating and cooling building as well as air pollution make people to use and utilize renewable energy, i.e., solar energy and ground heat energy. Ground source heat pump is regarded as the future and attractive energy-saving system using for the whole society. In this paper, a ground source heat pump system with the power of 16.6kW has been established firstly, and then the soil temperatures of four buried depths have been experimentally tested, finally the values of COP in this system have been calculated by the testing parameters. The results show that the soil temperature changes slightly from 11:00 to 18:00 in the testing six days. The results also show that the values of COP in this system range from 1.56 to 2.01, which is lower than other system. The present paper contributes to the knowledge of the soil temperature distribution characteristics and COP value for a real system in a spring season, when the system has a small building load.},
+  doi      = {https://doi.org/10.1016/j.enbuild.2017.07.067},
+  keywords = {Ground source heat pump, Coefficient of performance, Soil temperature distribution, Spring season},
+  url      = {http://www.sciencedirect.com/science/article/pii/S0378778817318613},
+}
+
+@InProceedings{Bernier2014,
+  author    = {Michel Bernier},
+  title     = {Sizing and simulating geothermal bore fields using thermal response factors},
+  booktitle = {11\textsuperscript{th} IEA Heat Pump Conference},
+  year      = {2014},
+  address   = {Montr{\'e}al, Qu{\'e}bec, Canada},
+  note      = {May 12--14},
+}
+
+@Article{BAUER2011250,
+  author   = {D. Bauer and W. Heidemann and H.-J.G. Diersch},
+  title    = {Transient {3D} analysis of borehole heat exchanger modeling},
+  journal  = {Geothermics},
+  year     = {2011},
+  volume   = {40},
+  number   = {4},
+  pages    = {250--260},
+  issn     = {0375-6505},
+  abstract = {This paper presents the development and application of a three-dimensional (3D) numerical simulation model for U-tube borehole heat exchangers (BHEs). The proposed model includes the thermal capacities of the borehole components, viz., the fluid inside the tubes, as well as the grouting material, making it possible to consider the transient effects of heat and mass transports inside the borehole. In this approach, the use of simplified thermal resistance and capacity models (TRCMs) provides accurate results while substantially reducing the number of nodes and the computation time compared with fully discretized computations such as finite element (FE) models. The model is compared with a fully discretized FE model which serves as a reference. Furthermore, the model is used to evaluate thermal response test (TRT) data by the parameter estimation technique. Comparison of the model results with the results of an analytical model based on the line-source theory further establishes the advantage of the developed 3D transient model, as the test duration can be shortened and results are more accurate.},
+  doi      = {https://doi.org/10.1016/j.geothermics.2011.08.001},
+  keywords = {Borehole heat exchanger, Thermal response test, Ground source heat pump, Geothermal heating, Geothermal cooling},
+  url      = {http://www.sciencedirect.com/science/article/pii/S0375650511000460},
 }
 
 @Comment{jabref-meta: databaseType:bibtex;}
