--- a/References.bib
+++ b/References.bib
@@ -394,7 +394,7 @@
 }
 
 @Standard{EPA2012,
-  title        = {{CWA \s 316(b)} cooling water intake structures},
+  title        = {{CWA 316(b)} cooling water intake structures},
   organization = {Environmental Protection Agency},
   author       = {EPA},
   address      = {Washington, D.C.},
@@ -1365,7 +1365,7 @@
   title     = {Dimensioning of lake heating collectors},
   year      = {1988},
   pages     = {61},
-  address   = {Gothenberg, Sweden},
+  address   = {Gothenburg, Sweden},
   publisher = {Chalmers University of Technology},
 }
 
@@ -1383,7 +1383,7 @@
   title     = {Heat absorption with bottom-placed cooled tubing in stagnant water},
   year      = {1982},
   pages     = {54},
-  address   = {Gothenberg, Sweden},
+  address   = {Gothenburg, Sweden},
   publisher = {Chalmers University of Technology},
 }
 
@@ -2160,7 +2160,7 @@ In 1996, a US federal agency began developing a new building energy simulation t
 }
 
 @Article{RUIZCALVO2015210,
-  author   = {F. Ruiz-Calvo and M. {De Rosa} and J. Acu{\~n}a and J. M. Corber{\'a}n and C. Montagud},
+  author   = {F. Ruiz-Calvo and M. {De Rosa} and J. Acu{\~{n}}a and J. M. Corber{\'a}n and C. Montagud},
   title    = {Experimental validation of a short-term borehole-to-ground {(B2G)} dynamic model},
   journal  = {Applied Energy},
   year     = {2015},
@@ -3067,7 +3067,7 @@ In 1996, a US federal agency began developing a new building energy simulation t
 }
 
 @Article{RN43,
-  author  = {Wemhoener, Carsten and H├{\~{n}}ssig, Werner and Wyss, Sara and Staubli, Jan},
+  author  = {Wemhoener, Carsten and H{\"a}ssig, Werner and Wyss, Sara and Staubli, Jan},
   title   = {Heat pump application in nearly zero energy buildings},
   journal = {Science and Technology for the Built Environment},
   year    = {2017},
@@ -3309,7 +3309,7 @@ In 1996, a US federal agency began developing a new building energy simulation t
   title    = {Thermal modeling of walls foundations and whole buildings using dynamic thermal networks},
   school   = {Chalmers University of Technology},
   year     = {2005},
-  address  = {G{\"o}teborg, Sweden},
+  address  = {Gothenburg, Sweden},
   abstract = {The modeling of the energy balance of buildings is a major task in building physics. In a new theory called dynamic thermal networks, developed at the Building Physics Research Group at Chalmers, the calculations are based on step- response functions, and the problems are illustrated in so-called dynamic networks. Long time scales for heat flux through building foundations and the surrounding ground are handled by a special reduction procedure.
 
 The aim of this thesis is to apply the theory to increase knowledge of the factors that influence a dynamic heat loss calculation. The theory is used to illustrate the thermal behavior of different wall types, different foundations and whole buildings in three dimensions. The thermal behavior of a crawl space and an attic is studied, where the influence of long-wave radiation between internal surfaces is accounted for. A few applications of the theory on energy balances for problems having two or three boundary temperatures are presented, and an example of an application in a moisture problem is shown.
@@ -3551,7 +3551,7 @@ The work reported in the thesis shows that it is fairly simple to apply the theo
 }
 
 @InProceedings{FasciLazzarottoAcunaClaesson2018,
-  author       = {Maria Letizia Fasc\`a and Alberto Lazzarotto and Jos\'e Acu\tilde{n}a and Joachim Claesson},
+  author       = {Maria Letizia Fasc\`a and Alberto Lazzarotto and Jos\'e Acu{\~{n}}a and Joachim Claesson},
   title        = {Thermal influence of neighboring {GSHP} installations: relevance of heat load temporal resolution},
   booktitle    = {IGSHPA Research Conference Proceedings},
   year         = {2018},
@@ -3952,7 +3952,7 @@ The work reported in the thesis shows that it is fairly simple to apply the theo
 }
 
 @Article{LAZZAROTTO20161353,
-  author   = {Alberto Lazzarotto and Folke Bj\"ork},
+  author   = {Alberto Lazzarotto and Folke Bj{\"o}rk},
   title    = {A methodology for the calculation of response functions for geothermal fields with arbitrarily oriented boreholes – {Part 2}},
   journal  = {Renewable Energy},
   year     = {2016},
@@ -4014,8 +4014,8 @@ The work reported in the thesis shows that it is fairly simple to apply the theo
   title     = {{Thermal Energy Storage for Sustainable Energy Consumption}},
   publisher = {Springer},
   year      = {2007},
-  author    = {Bo Nordell and Anna-Karin Ahlstr\"om},
-  editor    = {Halime \"O Paksoy},
+  author    = {Bo Nordell and Anna-Karin Ahlstr{\"o}m},
+  editor    = {Halime {\"O} Paksoy},
   address   = {Netherlands},
 }
 
