--- a/References.bib
+++ b/References.bib
@@ -1796,7 +1796,7 @@
 }
 
 @Article{SPITLER20151125,
-  author   = {Jeffrey D. Spitler and Signhild E.A. Gehlin},
+  author   = {Jeffrey D. Spitler and Signhild E. A. Gehlin},
   title    = {Thermal response testing for ground source heat pump systems---{An} historical review},
   journal  = {Renewable and Sustainable Energy Reviews},
   year     = {2015},
@@ -2315,7 +2315,7 @@ In 1996, a US federal agency began developing a new building energy simulation t
 }
 
 @InProceedings{JuhlinGehlin2017,
-  author       = {Kristina Juhlin and Signhild Gehlin},
+  author       = {Kristina Juhlin and Signhild E. A. Gehlin},
   title        = {Vertical {GSHP} systems in {Sweden} 1978--2015: a survey based on the {Swedish} well database},
   booktitle    = {IGSHPA Research Conference Proceedings},
   year         = {2017},
