--- a/References.bib
+++ b/References.bib
@@ -4096,4 +4096,14 @@ The work reported in the thesis shows that it is fairly simple to apply the theo
   url      = {10.1080/23744731.2018.1438663},
 }
 
+@Article{Naldi2919,
+  author  = {C. Naldi and E. Zanchini},
+  title   = {Comparison of isothermal and isoflux g-functions for borehole-heat-exchanger fields},
+  journal = {Jounal of Physics: Conference Series},
+  year    = {2019},
+  number  = {1224},
+  pages   = {012026},
+  doi     = {10.1088/1742-6596/1224/1/012026},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
